Col-1 Completed Responsiveness Remaining

--- a/Project-1/index.html
+++ b/Project-1/index.html
@@ -70,23 +70,29 @@
     </nav>
 
     <!-- Main & Main-Container -->
-    <main class="md:w-4/5 h-full grid grid-cols-1 md:grid-cols-[1.25fr_1fr] relative top-10 md:top-40 px-2 mx-auto border  -z-10">
+    <main class="md:w-4/5 h-fit grid grid-cols-1 md:grid-cols-[1.25fr_1fr] relative top-10 md:top-40 px-2 mx-auto border -z-10 md:relative">
         
-        <div class="flex flex-col gap-8 border border-black ">
+        <div class="flex flex-col gap-8 border border-red-500 ">
             <h1 class="text-6xl font-semibold text-left text-[#1C1C1C] md:leading-tight">STUDY FROM&nbsp;<br> HOME WITH EXPERT</h1>
 
-            <div>
+            <div class="border-l border-l-gray-600 py-2">
                 <h2 class="text-xl text-[#1C1C1C]" >A learning system based on formalised teaching with the help of resources.
                 </h2>
             </div>
 
-            <div class="flex gap-4">
-                <button class="">Get Started</button>
-                <button class="">Learn More</button>
+            <div class="flex gap-5">
+                <button class="px-8 py-4 bg-[#FF5202] text-white">Get Started</button>
+                <button class="px-8 py-4 border border-black text-gray-900 font-semibold">Learn More</button>
             </div>
+
+            <img src="./assets/curve-arrow.png" alt="Curve-Arrow" class="w-1/4 md:relative self-end right-10 max-[1140px]:top-0 min-[1141px]:-top-20">
         </div>
     
     </main>
+
+        <div class="">
+
+        </div>
 
 </body>
 </html>
