Dark Mode Work Done On Form Section

--- a/Project-2/index.html
+++ b/Project-2/index.html
@@ -95,7 +95,7 @@
 
             <!-- Col-2 -->
             <div class=" flex flex-col items-end justify-center h-full">
-                <form class="bg-gray-100 sm:bg-gray-100 flex flex-col px-6 w-full md:mt-20 rounded-xl" action="">
+                <form class="bg-gray-100 flex flex-col px-6 w-full md:mt-20 rounded-xl" action="">
 
                     <h1 class="text-gray-900 text-center text-semibold text-2xl font-semibold w-full mt-9 mb-4">Book Appointment</h1>
 
@@ -651,7 +651,7 @@
 
     <!-- Footer Section -->
 
-    <section class="bg-white flex justify-center flex-col gap-20 px-5 py-14 md:mix-blend-difference">
+    <section data-footer="footer" class="bg-white flex justify-center flex-col gap-20 px-5 py-14">
 
         <div class="flex md:justify-evenly flex-col gap-5 md:gap-0 md:flex-row px-5 md:px-0">
 
@@ -661,7 +661,7 @@
                     Get In Touch
                 </h1>
 
-                <p class="font-semibold md:w-4/5">The quick fox jumps over the lazy dog</p>
+                <p class="text-gray-900 font-semibold md:w-4/5">The quick fox jumps over the lazy dog</p>
 
                 <div class="flex flex-row gap-5">
                     <i class="fa-brands fa-facebook fa-xl text-sky-400" ></i>
@@ -704,7 +704,7 @@
             </div>
 
             <!-- Col-4 -->
-            <div class="flex flex-col gap-5">
+            <div  class="flex flex-col gap-5">
                 <h1 class="text-gray-900 font-bold text-2xl">
                     Resources
                 </h1>
