basic nav layout ready for large screens

--- a/Project-3/index.html
+++ b/Project-3/index.html
@@ -6,7 +6,25 @@
     <title>Project-3</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="bg-gray-700">
+    <nav class="flex justify-between mx-8 py-5">
+        <img src="./assets/logo.png" alt="Logo">
+        <ul class="flex gap-20">
+            <li ><select class="bg-transparent" name="Product">
+                <option value="E-BIKE"><a href="#">PRODUCT</a></option>
+                <option value="E-BIKE"><a href="#">E-BIKE</a></option>
+                <option value="E-BIKE"><a href="#">SMART HELMET</a></option>
+                <option value="E-BIKE"><a href="#">SPORTS GEARS</a></option>
+                <option value="E-BIKE"><a href="#">SAFETY GEARS</a></option>
+            </select></li>
+            <li>GALLERY</li>
+            <li>CONTACT</li>
+        </ul>
 
+        <div>
+            <button>LOG IN</button>
+            <button>SIGN UP</button>
+        </div>
+    </nav>
 </body>
 </html>
