NavBar Completed with Responsiveness and Hamburger Button

--- a/Project-3/index.html
+++ b/Project-3/index.html
@@ -4,14 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project-3</title>
+    <script src="./hamburger.js" defer></script>
+    <!-- Hamburger and menu -->
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="bg-gray-700">
-    <nav class="flex justify-between mx-8 py-5">
-        <img src="./assets/logo.png" alt="Logo">
-        <ul class="flex gap-20">
-            <li ><select class="bg-transparent" name="Product">
-                <option value="E-BIKE"><a href="#">PRODUCT</a></option>
+<body class="bg-white">
+    <nav class="flex justify-between px-4 md:px-8 py-2 md:py-4 fixed w-full md:border-b shadow-sm max-md:relative">
+        <img class="hidden md:block" src="./assets/logo.png" alt="Logo">
+        
+        <ion-icon data-Menu="Menu-Button" class="block md:hidden text-3xl z-10" name="menu" onclick="Menu(this)"></ion-icon>
+        
+        <ul data-nav-options = "navlinks-Container" class="max-md:bg-slate-300 max-md:w-[45vw] md:gap-20 items-center flex max-md:justify-evenly max-md:flex-col max-md:h-screen left-0 top-0 max-md:absolute max-md:hidden">
+            <li class=""><select class="bg-transparent" name="Product">
+                <option value="E-BIKE" class="w-1/2"><a href="#">PRODUCT</a></option>
                 <option value="E-BIKE"><a href="#">E-BIKE</a></option>
                 <option value="E-BIKE"><a href="#">SMART HELMET</a></option>
                 <option value="E-BIKE"><a href="#">SPORTS GEARS</a></option>
@@ -21,9 +29,9 @@
             <li>CONTACT</li>
         </ul>
 
-        <div>
-            <button>LOG IN</button>
-            <button>SIGN UP</button>
+        <div class="flex gap-3 items-center">
+            <button class="bg-white h-fit  py-1 md:py-2 px-2 md:px-4 rounded-md">LOG IN</button>
+            <button class="bg-[#42454A] h-fit py-1 md:py-2 px-2 md:px-4 rounded-md text-gray-200">SIGN UP</button>
         </div>
     </nav>
 </body>
