Summerised Specs Section Completed With Responsiveness

--- a/Project-3/index.html
+++ b/Project-3/index.html
@@ -86,7 +86,54 @@
             <img src="./assets/header image.png" alt="">
         </div>
     </main>     <!--Hero Section Ends-->
+    <!--  (01) img -->
+    <section class="w-full flex flex-row-reverse items-center">
+        <div class="flex px-10 gap-10">
+            <img src="./assets/01.png" alt="01">
+            <div class="flex items-center border h-fit self-center border-[#42454A] rounded-3xl" >
+                <div class="px-6 py-3 border-r border-[#42454A]"><i class="fa-solid fa-greater-than xs fa-rotate-180"></i></div>
+                <div class="px-6 py-3 "><i class="fa-solid fa-greater-than xs"></i></div>
+            </div>
+        </div>
+    </section>
 
+    <!-- Summerised Specs -->
 
+    <section class="flex max-md:flex-col justify-evenly items-center  w-full my-12 max-md:gap-5">
+        <!-- 1 -->
+        <div class="flex flex-col justify-center items-center border rounded-lg shadow-xl hover:scale-110 transition-all duration-200 ease-in px-10 pt-7 pb-4">
+            <div><h1 class="text-4xl font-['Poppins','sans-serif'] font-bold text-[#42454A]">105<span class="text-xl ml-3  font-semibold">lbs</span></h1></div>
+            <h2 class="text-sm font-['Poppins','sans-serif'] font-semibold text-[#42454A] py-3">Net Weight</h2>
+        </div>
+        <!-- 2 -->
+        <div class="flex flex-col justify-center items-center border rounded-lg shadow-xl hover:scale-110 transition-all duration-200 ease-in px-10 pt-7 pb-4">
+            <div><h1 class="text-4xl font-['Poppins','sans-serif'] font-bold text-[#42454A]">26<span class="text-xl ml-3  font-semibold">mph</span></h1></div>
+            <h2 class="text-sm font-['Poppins','sans-serif'] font-semibold text-[#42454A] py-3">Top Speed</h2>
+        </div>
+        <!-- 3 -->
+        <div class="flex flex-col justify-center items-center border rounded-lg shadow-xl hover:scale-110 transition-all duration-200 ease-in px-9 pt-7 pb-4">
+            <div><h1 class="text-4xl font-['Poppins','sans-serif'] font-bold text-[#42454A]">38<span class="text-xl ml-3  font-semibold">miles</span></h1></div>
+            <h2 class="text-sm font-['Poppins','sans-serif'] font-semibold text-[#42454A] py-3">Max Range</h2>
+        </div>
+        <!-- 4 -->
+        <div class="flex flex-col justify-center items-center border rounded-lg shadow-xl hover:scale-110 transition-all duration-200 ease-in px-12 pt-7 pb-4">
+            <div><h1 class="text-4xl font-['Poppins','sans-serif'] font-bold text-[#42454A]">89<span class="text-xl ml-3  font-semibold">nm</span></h1></div>
+            <h2 class="text-sm font-['Poppins','sans-serif'] font-semibold text-[#42454A] py-3">Max Torques</h2>
+        </div>
+
+        <!-- 5 -->
+
+        <div class="flex flex-col justify-center items-center border rounded-lg shadow-xl hover:scale-110 transition-all duration-200 ease-in px-6 pt-7 pb-4">
+            <div><h1 class="text-4xl font-['Poppins','sans-serif'] font-bold text-[#42454A]">22%<span class="text-xl ml-3  font-semibold">slope</span></h1></div>
+            <h2 class="text-sm font-['Poppins','sans-serif'] font-semibold text-[#42454A] py-3">Hill Climbing</h2>
+        </div>
+
+        <!-- 6 -->
+
+        <div class="flex flex-col justify-center items-center border rounded-lg shadow-xl hover:scale-110 transition-all duration-200 ease-in px-5 pt-7 pb-4">
+            <div><h1 class="text-4xl font-['Poppins','sans-serif'] font-bold text-[#42454A]">2<span class="text-3xl font-semibold">x</span></h1></div>
+            <h2 class="text-sm font-['Poppins','sans-serif'] font-semibold text-[#42454A] py-3">Hydralic disc Brakes</h2>
+        </div>
+    </section>
 </body>
 </html>
