High Efficiency Motor Section Completed With Responsiveness

--- a/Project-3/index.html
+++ b/Project-3/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="bg-white relative">
+<body class="bg-white w-full">
 
     <!-- Nav-Bar -->
     <nav class="bg-white flex justify-between px-4 md:px-8 py-2 md:py-4 fixed top-0 w-full md:border-b shadow-sm z-10">
@@ -87,7 +87,7 @@
         </div>
     </main>     <!--Hero Section Ends-->
     <!--  (01) img -->
-    <section class="w-full flex flex-row-reverse items-center">
+    <section class="w-full flex flex-row-reverse items-center px-4">
         <div class="flex px-10 gap-10">
             <img src="./assets/01.png" alt="01">
             <div class="flex items-center border h-fit self-center border-[#42454A] rounded-3xl" >
@@ -153,9 +153,9 @@
             </div>
 
             <div class="flex justify-center items-center w-1/2 ">
-                <ul class=" flex flex-col text-[#42454A] text-sm md:text-lg">
+                <ul class=" flex flex-col text-[#42454A] text-sm md:text-lg relative">
                     <!-- 1 -->
-                    <li class="list-image-[url('./assets/Icon.png')] my-2 md:my-3"> <span class="relative bottom-5 max-[612px]:bottom-8">Lightweight aircraft grade aluminium frame</span> 
+                    <li class="list-image-[url('./assets/Icon.png')] my-2 md:my-3 relative"> <span class="relative bottom-5 max-[612px]:bottom-8">Lightweight aircraft grade aluminium frame</span> 
                     </li>
                     <!-- 2 -->
                     <li class="list-image-[url('./assets/Icon.png')] my-3"> <span class="relative bottom-5 max-[355px]:bottom-8">Car grade lithium battery</span> </li>
@@ -166,6 +166,17 @@
                 </ul>
             </div>
         </div>
+    </section>
+
+    <!-- High Efficiency Motor -->
+
+    <section class="font-['Poppins','serif'] px-4 h-full max-[460px]:mt-44 max-md:mt-96">
+        <!-- <div class="flex flex-col">
+            <h1 class="text-4xl text-[#42454A]">High Efficiency Motor</h1>
+            <h2 class="text-2xl text-[#42454A]">More torque for powerful riding with 22% maximum hill climbing capability.</h2>
+        </div> -->
+
+        <img src="./assets/high efficiency motor.png" alt="High Efficiency Motor">
     </section>
 </body>
 </html>
