Multiple Accessories Section Completed With Responsiveness

--- a/Project-3/index.html
+++ b/Project-3/index.html
@@ -178,5 +178,33 @@
 
         <img src="./assets/high efficiency motor.png" alt="High Efficiency Motor">
     </section>
+
+    <!-- Multiple Accessories -->
+
+    <section class="font-['Poppins','serif'] px-4 ">
+        <div class="flex justify-center pl-9 max-md:pl-4 max-md:pr-3 h-fit">
+            <div>
+                <h1 class="text-center text-5xl font-semibold mt-14 text-[#42454A]">Multiple Accessories</h1>
+                <p class="text-[#42454A] text-lg mt-10">There are multiple modes for the scooter for your multiple needs.</p>
+            </div>
+        </div>
+
+        <div class="flex flex-col md:flex-row my-10 md:my-28">
+            <ul class="md:w-2/5">
+                <li class="my-5"><h1 class="text-5xl font-semibold text-[#42454A]">Golf Bag Rock</h1></li>
+                <li class="before:content-[url('./assets/Icon.png')] text-sm md:text-lg my-5"><span class="relative bottom-5">Material: Aluminium alloy</span> </li>
+                <li class="before:content-[url('./assets/Icon.png')] text-sm md:text-lg my-5"><span class="relative bottom-5">Color: Black</span> </li>
+                <li class="before:content-[url('./assets/Icon.png')] text-sm md:text-lg my-5"><span class="relative bottom-5">Capacity: 45lbs</span> </li>
+                <li class="before:content-[url('./assets/Icon.png')] text-sm md:text-lg my-5"><span class="relative bottom-5"> Ease: Steady & adjustable</span></li>
+            </ul>
+
+            <div class="md:w-3/5">
+                <img class="w-full" src="./assets/golf bag rock.png" alt="">
+            </div>
+
+        </div>
+    </section>
 </body>
 </html>
+
+<!-- Hakikat chhup nahi sakti banawat ke asulow se , khusbu aa nahi sakti kagaz ke fullow se. -->
