Shopping Rack Section Completed With Responsiveness

--- a/Project-3/index.html
+++ b/Project-3/index.html
@@ -204,6 +204,26 @@
 
         </div>
     </section>
+
+    <!-- Shopping Rack -->
+
+    <section class="font-['Poppins','serif'] pr-4 ">
+
+        <div class="flex flex-col md:flex-row justify-between md:gap-24  " >
+
+            <img class="max-md: order-2 md:order-1 md:w-1/2 xl:w-full" src="./assets/shopping rack.png" alt="Shopping Rack">
+
+            
+                <ul class="max-md:order-1  max-md:pl-4 w-full md:order-2 ">
+                    
+                    <li class="my-5"><h1 class="text-5xl font-semibold text-[#42454A]">Shopping Rack</h1></li>
+                    <li class="before:content-[url('./assets/Icon.png')] text-sm md:text-lg my-5 "><span class="relative bottom-5">Material: Aluminium alloy</span> </li>
+                    <li class="before:content-[url('./assets/Icon.png')] text-sm md:text-lg my-5"><span class="relative bottom-5">Color: Black</span> </li>
+                    <li class="before:content-[url('./assets/Icon.png')] text-sm md:text-lg my-5"><span class="relative bottom-5">Capacity: 45lbs</span> </li>
+                    <li class="before:content-[url('./assets/Icon.png')] text-sm md:text-lg my-5"><span class="relative bottom-5"> Ease: Steady & adjustable</span></li>
+                </ul>
+        </div>
+    </section>
 </body>
 </html>
 
