'More Accessories Coming Sonn' Heading Added In Shoping Rack Section With Responsiveness

--- a/Project-3/index.html
+++ b/Project-3/index.html
@@ -207,7 +207,7 @@
 
     <!-- Shopping Rack -->
 
-    <section class="font-['Poppins','serif'] pr-4 ">
+    <section class="font-['Poppins','serif'] sm:pr-4 flex flex-col">
 
         <div class="flex flex-col md:flex-row justify-between md:gap-24  " >
 
@@ -223,6 +223,9 @@
                     <li class="before:content-[url('./assets/Icon.png')] text-sm md:text-lg my-5"><span class="relative bottom-5"> Ease: Steady & adjustable</span></li>
                 </ul>
         </div>
+
+        <h1 class="text-center justify-self-center self-center text-lg min-[364px]:text-xl leading-3 sm:text-3xl font-semibold my-14 text-[#42454A] border-[#42454A] border-2 w-fit rounded-lg sm:px-10 px-5 sm:py-8 py-4">More Accessories Coming Soon</h1>
+
     </section>
 </body>
 </html>
