--- a/Project-3/index.html
+++ b/Project-3/index.html
@@ -316,7 +316,7 @@
 
     <!-- Testimonials -->
 
-    <section class="font-['Poppins','sans-serif'] px-4 bg-[#FAFAFA] py-10">
+    <section class="font-['Poppins','sans-serif'] px-4 bg-[#FAFAFA] py-10 w-full">
         <!-- Testimonial Heading -->
         <div class="flex justify-center pl-9 max-md:pl-4 max-md:pr-3 mb-16 h-fit">
             <div>
@@ -328,7 +328,7 @@
 
         <div class="flex flex-col max-md:gap-5 md:flex-row items-center justify-evenly w-fit md:w-full">
             <!-- Card-1 -->
-            <div class="flex flex-col border-2 w-fit md:w-1/4 py-6 px-7 hover:scale-110 hover:bg-white transition-all ease-in duration-200">
+            <div class="flex flex-col border w-fit md:w-1/4 py-6 px-7 shadow-sm hover:shadow-lg hover:scale-110 hover:bg-white transition-all ease-in duration-200">
                 <img class="w-1/3 self-center" src="https://as1.ftcdn.net/v2/jpg/01/64/65/46/1000_F_164654600_JJ7D1mPKQCu7hi1VyaN765CNxZEwWsef.jpg" alt="Star">
 
                 <p class="text-center py-5 text-[#42454A]">On the other hand, we denounce with righteous indignation and dislike men who are so beguilde and demoralized by the charms of pleasure.</p>
@@ -345,7 +345,7 @@
                 </div>
 
              <!-- Card-2 -->
-            <div class="flex flex-col border-2 w-fit md:w-1/4 py-6 px-7 hover:scale-110 hover:bg-white transition-all ease-in duration-200">
+            <div class="flex flex-col border w-fit md:w-1/4 py-6 px-7 shadow-sm hover:shadow-lg hover:scale-110 hover:bg-white transition-all ease-in duration-200">
 
                <img class="w-1/3 self-center" src="https://as1.ftcdn.net/v2/jpg/01/64/65/46/1000_F_164654600_JJ7D1mPKQCu7hi1VyaN765CNxZEwWsef.jpg" alt="Star">
 
@@ -363,7 +363,7 @@
             </div>
 
             <!-- Card-3 -->
-            <div class="flex flex-col border-2 w-fit md:w-1/4 py-6 px-7 hover:scale-110 hover:bg-white transition-all ease-in duration-200">
+            <div class="flex flex-col border w-fit md:w-1/4 py-6 px-7 shadow-sm hover:shadow-lg hover:scale-110 hover:bg-white transition-all ease-in duration-200">
 
               <img class="w-1/3 self-center" src="https://as1.ftcdn.net/v2/jpg/01/64/65/46/1000_F_164654600_JJ7D1mPKQCu7hi1VyaN765CNxZEwWsef.jpg" alt="Star">
             
@@ -378,6 +378,19 @@
                    </div>
                </div>
             
+            </div>
+
+        </div>
+
+        <!-- Navigation Button -->
+
+        <div class="flex gap-5 w-fit mx-auto mt-10">
+            <div class="bg-[#FAFAFA] py-3 px-5 w-fit  text-[#42454A] text-lg rounded-full border-2 border-[#42454A] cursor-pointer hover:bg-[#42454A] hover:text-white transition-all ease-in duration-200">
+                <i class="fa-solid fa-arrow-right  rotate-180"></i>
+            </div>
+
+            <div class="bg-[#FAFAFA] py-3 px-5 w-fit  text-[#42454A] text-lg rounded-full border-2 border-[#42454A] cursor-pointer hover:bg-[#42454A] hover:text-white transition-all ease-in duration-200">
+                <i class="fa-solid fa-arrow-right"></i>
             </div>
 
         </div>
