--- a/Project-3/index.html
+++ b/Project-3/index.html
@@ -397,6 +397,31 @@
 
     </section>
 
+    <!-- Subscribe To NewsLetter Section -->
+    
+    <section class="font-['Poppins','sans-serif'] px-4 w-full">
+
+        <div class="flex justify-center pl-9 max-md:pl-4 max-md:pr-3 mb-16 h-fit">
+
+            <!-- Heading Section & Input Section -->
+            <div class="flex flex-col items-center">
+                <h1 class="text-3xl md:text-5xl font-semibold mt-14 text-[#42454A]">Subscribe To Newsletter</h1>
+                <p class="text-[#42454A] text-lg mt-4 font-semibold font-['Montserrat','serif']">Subscirbe to our Newsletter to get amazing offers in future.</p>
+
+                <!-- Input and Button Container -->
+                <div class="self-center justify-center items-center flex max-md:flex-col w-full gap-5 mt-10">
+                    <input class="bg-[#FAFAFA] border w-3/4 rounded-lg outline-none px-4 md:px-8 py-3 md:py-5 text-sm md:text-xl text-[#42454A]" type="email" name="email" placeholder="Enter your email">
+
+                    <button class="w-fit md:w-1/4 px-2 md:px-5 py-2 md:py-5 border rounded-lg bg-[#42454A] text-white text-center text-sm md:text-lg cursor-pointer hover:bg-[#FAFAFA] hover:text-[#42454A] transition-all ease-in duration-200" type="submit">Get Start</button>
+                </div>   <!-- Input and Button Container (ENDS) -->
+
+            </div>  <!-- Heading Section & Input Section (ENDS)-->
+
+   
+        </div>
+    
+    </section>
+
 </body>
 </html>
 <!-- https://as2.ftcdn.net/v2/jpg/03/56/17/91/1000_F_356179107_TmjUM2MqfO7ix2wdZg8ONDXupqWALSAf.jpg -->
