Copyright statement Added With Responsiveness

--- a/Project-3/index.html
+++ b/Project-3/index.html
@@ -328,7 +328,7 @@
 
         <div class="flex flex-col max-md:gap-5 md:flex-row items-center justify-evenly w-fit md:w-full">
             <!-- Card-1 -->
-            <div class="flex flex-col border w-fit md:w-1/4 py-6 px-7 shadow-sm hover:shadow-lg hover:scale-110 hover:bg-white transition-all ease-in duration-200">
+            <div class="flex flex-col border w-fit md:w-1/4 py-6 px-7 shadow-sm hover:shadow-2xl hover:scale-110 hover:bg-white transition-all ease-in duration-200">
                 <img class="w-1/3 self-center" src="https://as1.ftcdn.net/v2/jpg/01/64/65/46/1000_F_164654600_JJ7D1mPKQCu7hi1VyaN765CNxZEwWsef.jpg" alt="Star">
 
                 <p class="text-center py-5 text-[#42454A]">On the other hand, we denounce with righteous indignation and dislike men who are so beguilde and demoralized by the charms of pleasure.</p>
@@ -345,7 +345,7 @@
                 </div>
 
              <!-- Card-2 -->
-            <div class="flex flex-col border w-fit md:w-1/4 py-6 px-7 shadow-sm hover:shadow-lg hover:scale-110 hover:bg-white transition-all ease-in duration-200">
+            <div class="flex flex-col border w-fit md:w-1/4 py-6 px-7 shadow-sm hover:shadow-2xl hover:scale-110 hover:bg-white transition-all ease-in duration-200">
 
                <img class="w-1/3 self-center" src="https://as1.ftcdn.net/v2/jpg/01/64/65/46/1000_F_164654600_JJ7D1mPKQCu7hi1VyaN765CNxZEwWsef.jpg" alt="Star">
 
@@ -363,7 +363,7 @@
             </div>
 
             <!-- Card-3 -->
-            <div class="flex flex-col border w-fit md:w-1/4 py-6 px-7 shadow-sm hover:shadow-lg hover:scale-110 hover:bg-white transition-all ease-in duration-200">
+            <div class="flex flex-col border w-fit md:w-1/4 py-6 px-7 shadow-sm hover:shadow-2xl hover:scale-110 hover:bg-white transition-all ease-in duration-200">
 
               <img class="w-1/3 self-center" src="https://as1.ftcdn.net/v2/jpg/01/64/65/46/1000_F_164654600_JJ7D1mPKQCu7hi1VyaN765CNxZEwWsef.jpg" alt="Star">
             
@@ -424,7 +424,7 @@
 
     <!-- Footer Section -->
 
-    <footer class="font-['Poppins','sans-serif'] bg-[#42454A] py-10">
+    <footer class="font-['Poppins','sans-serif'] bg-[#42454A] pt-10 relative h-full fit pb-20">
 
         <div class="flex flex-col max-md:items-start md:flex-row-reverse relative">
 
@@ -467,7 +467,7 @@
 
         </div>
 
-        
+        <h1 class="mx-auto w-full text-center text-gray-200  absolute bottom-5 max-md:text-sm">&copy; Copyright 2023. All rights reserved.</h1>
     </footer>
 
 </body>
