NavBar Completed for desktop and Main Secition Background Styling is Done

--- a/Project-4/index.html
+++ b/Project-4/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav class="bg-gray-700 fixed top-0 w-full flex md:flex-row justify-between md:px-10 py-3">
+    <nav class="bg-transparent border-b-2 border-b-[#fff] fixed top-0 w-full flex md:flex-row justify-between items-center md:px-10 py-3" style="backdrop-filter: blur(100px);">
         <img src="./assets/logo.png" alt="Logo">
         <ul class="flex">
             <li class="px-4 text-gray-200"><a href="#">MARKETPLACE</a></li>
@@ -16,9 +16,16 @@
             <li class="px-4 text-gray-200"><a href="#">FAQ</a></li>
         </ul>
         <div>
-            <button class="text-gray-200 border-2 border-black">Log In</button>
-            <button class="text-gray-200 border-2 border-black">Sign Up</button>
+            <button class="bg-[#1C1727] text-gray-200 border-2 px-4 py-1" style="border-image: linear-gradient(120deg, rgba(63,167,242,1) 0%, rgba(168,49,253,1) 100%) 1;">Log In</button>
+            <button class="bg-[#1C1727] text-gray-200 border-2 px-4 py-1" style="border-image: linear-gradient(120deg, rgba(63,167,242,1) 0%, rgba(168,49,253,1) 100%) 1;">Sign Up</button>
         </div>
     </nav>
+
+    <main class="h-screen" style="background : linear-gradient(120deg, rgba(212,101,252,1) 0%, rgba(76,32,180,1) 14%, rgba(25,16,47,1) 30%)">
+        <h1>1-1</h1>
+        <h1>2-1</h1>
+        <h1>3-1</h1>
+        <h1>4-1</h1>
+    </main>
 </body>
 </html>
