Button Styling Fixed As Per Requirement

--- a/Project-4/index.html
+++ b/Project-4/index.html
@@ -34,9 +34,19 @@
        <!-- Buttons -->
         <div>
             <!-- Login Button -->
-            <button class="bg-[#1C1727] text-gray-200 border-2 px-4 py-1" style="border-image: linear-gradient(120deg, rgba(63,167,242,1) 0%, rgba(168,49,253,1) 100%) 1;">Log In</button>
+            <button class="bg-[#1C1727] rounded-xl text-gray-200 border-2 border-transparent bg-transparent px-4 py-1" style="           
+            background-image: linear-gradient(90deg, #1C1727, #1C1727),
+            linear-gradient(120deg, rgba(63,167,242,1) 0%, rgba(168,49,253,1) 100%);
+            background-clip: padding-box, border-box;
+            background-origin: border-box;
+            ">Log In</button>
             <!-- SignUp Button -->
-            <button class="bg-[#1C1727] text-gray-200 border-2 px-4 py-1" style="border-image: linear-gradient(120deg, rgba(63,167,242,1) 0%, rgba(168,49,253,1) 100%) 1;">Sign Up</button>
+            <button class="bg-[#1C1727] text-gray-200 border-transparent bg-transparent rounded-xl border-2 px-4 py-1"  style="           
+            background-image: linear-gradient(90deg, #1C1727, #1C1727),
+            linear-gradient(120deg, rgba(63,167,242,1) 0%, rgba(168,49,253,1) 100%);
+            background-clip: padding-box, border-box;
+            background-origin: border-box;
+            ">Sign Up</button>
         </div>
     </nav>
 
