--- a/Project-4/index.html
+++ b/Project-4/index.html
@@ -18,7 +18,7 @@
 <body>
 
     <!-- NavBar -->
-    <nav class=" border-b-2 border-b-[#fff] fixed top-0 w-full flex md:flex-row justify-between items-center px-5 md:px-10 py-3 backdrop-blur-lg" >
+    <nav class=" border-b-2 border-b-[#fff] fixed top-0 w-full flex md:flex-row justify-between items-center px-5 md:px-10 py-1 md:py-3 backdrop-blur-lg z-10">
         <img class="max-md:hidden" src="./assets/logo.png" alt="Logo"/>
              
             <div  data-hamButton = 'hamburger Button' class="z-10 self-center block md:hidden -ml-5">
@@ -53,13 +53,13 @@
         </div>
     </nav>
 
-    <main class="h-screen
-    flex flex-row
+    <main class="
+    flex flex-col md:flex-row 
     " style="background : linear-gradient(120deg, rgba(212,101,252,1) 0%, rgba(76,32,180,1) 14%, rgba(25,16,47,1) 30%)">
     <!-- Row-1 -->
-    <div class="flex flex-col w-[55%] gap-16 px-16">
+    <div class="flex flex-col w-full md:w-[55%] gap-16 px-8 md:px-16 order-2 md:order-1">
 <!-- #D2ACFF  #8773D2 -->
-        <h1 class="font-mono text-6xl mt-28" style="background: -webkit-linear-gradient( #D2ACFF, #8773D2);
+        <h1 class="font-mono text-6xl md:mt-28" style="background: -webkit-linear-gradient( #D2ACFF, #8773D2);
         background-clip: text;
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;">Keep Calm & <br> Collect Your NFTs.</h1>
@@ -91,8 +91,8 @@
 
     </div>
     <!-- Row-2 -->
-    <div class="w-[45%] flex justify-center items-center">
-        <img class="w-4/5" src="./assets/image.png" alt="Hand">
+    <div class="w-full max-md:px-8 md:w-[45%] flex justify-center items-center order-1 md:order-2">
+        <img class="w-full md:w-4/5" src="./assets/image.png" alt="Hand">
     </div>
 
     </main>
