Background color set for 'Latest NFT Section'

--- a/Project-4/index.html
+++ b/Project-4/index.html
@@ -15,7 +15,7 @@
     <!-- Functionality For Hamburger And SideBar Menu -->
     <script src="./hamburger.js" defer></script>
 </head>
-<body>
+<body class="bg-[#160E2A]">
 
     <!-- NavBar -->
     <nav class=" border-b-2 border-b-[#fff] fixed top-0 w-full flex md:flex-row justify-between items-center px-5 md:px-10 py-1 md:py-3 backdrop-blur-lg z-10">
@@ -149,10 +149,15 @@
         </div>
     </section>
     
+    <!-- Latest NFT Section  -->
 
+    <section class="h-screen relative" >
+        <div class="h-full w-3/4 absolute -left-[40%]" style="background: radial-gradient(circle, rgba(72,9,139,1) 0%,  rgba(22,14,42,1) 60%);">
 
+        </div>
+    </section>
 
-    <!-- min-[1243px]:bg-contain -->
+    
 
 </body>
 </html>
